...



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/navButtons"
        android:background="#E4ECEC"
        >


        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
...
                        android:inputType="text"
                        android:shadowColor="@color/black"
                        android:textColor="@color/black"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/txtCompanyName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtPI"
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/name"
...
                        app:tint="@color/white"
                        tools:ignore="HardcodedText" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/LayoutPostJob"
                    android:layout_width="500dp"
                    android:layout_height="750dp"
                    android:layout_below="@+id/LayoutCv"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="30dp"
...
                        android:layout_marginStart="50dp"
                        android:layout_marginTop="25dp"
                        android:text="@string/publish_a_job"
                        android:textColor="@color/black" />

                    <EditText
                        android:id="@+id/edtCompany"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/txtUpJob"
                        android:layout_marginStart="160dp"
                        android:layout_marginTop="9dp"
                        android:autofillHints="@string/company_name"
...
                        android:text="@string/company_name"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <TextView
                        android:id="@+id/SpinJobsType1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/edtCompany"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="15dp"
...
                        android:text="@string/location_of_job"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <TextView
                        android:id="@+id/SpinJobsLocation1"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/row_item_textview"
                        android:layout_alignParentEnd="true"
                        android:layout_marginStart="100dp"
                        android:layout_marginTop="15dp"
...
                        android:text="@string/job_description"
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                    <androidx.core.widget.NestedScrollView
                        android:id="@+id/NestedScrollView1"
                        android:layout_width="230dp"
                        android:layout_height="300dp"
                        android:layout_below="@+id/placeOfJob"
                        android:layout_marginStart="160dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="5dp"
                        android:gravity="top">

                        <EditText
                            android:id="@+id/edtJobDescription"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="5dp"
                            android:autofillHints="@string/job_description"
                            android:backgroundTint="@color/black"
                            android:gravity="top"
...
                            android:textSize="12sp" />


                    </androidx.core.widget.NestedScrollView>

                    <Button
                        android:id="@+id/BtnUpJobDesc"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/AgreeBtn"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:backgroundTint="#FF5722"
...
