...
            android:text="@string/job_type"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/SpinJobsType"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJobType"
            android:layout_alignParentStart="true"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="20dp"
...
            android:padding="12dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:drawableEndCompat="@drawable/ic_arrow" />

        <TextView
            android:id="@+id/SpinJobsLocation"
            android:layout_width="144dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtJobType"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="180dp"
            android:layout_marginEnd="15dp"
...
            android:text="@string/location_of_job"
            android:textColor="@color/black"
            android:textSize="18sp" />


        <ImageButton
            android:id="@+id/BtnSearch"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@+id/searchAnim"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
...
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/search" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/contactsRecView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@+id/BtnSearch"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:nestedScrollingEnabled="false" />
...
