...
        <ImageView
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:layout_marginRight="30dp"
            android:layout_toLeftOf="@+id/btnProfile"
            android:src="@drawable/line"
            app:tint="#E4DDDD" />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="50dp"
            android:adjustViewBounds="true"
...
            android:layout_toRightOf="@+id/btnProfile"
            android:scaleType="fitXY"
            app:tint="#E4DDDD"
            android:src="@drawable/line" />

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="8dp"
...
